[gd_scene load_steps=15 format=3 uid="uid://blf7xnjbskegc"]

[ext_resource type="Script" path="res://scenes/levels/level_002/level_002.gd" id="1_tnk3h"]
[ext_resource type="TileSet" uid="uid://bfa5r8i4tfujl" path="res://scenes/levels/TileSets/Station/station001.tres" id="2_5uofa"]
[ext_resource type="PackedScene" uid="uid://cuwqfswhhwydl" path="res://actor/character/player.tscn" id="3_fp1qh"]
[ext_resource type="PackedScene" uid="uid://bhyrsrva7afmq" path="res://actor/object/train.tscn" id="4_5jfx4"]
[ext_resource type="PackedScene" uid="uid://b7qi3o4l0pd5n" path="res://scenes/camera/MapCamera.tscn" id="4_d3qgh"]
[ext_resource type="PackedScene" uid="uid://vrk5qsnxlfvw" path="res://actor/object/ticket_machine.tscn" id="6_mvghg"]
[ext_resource type="PackedScene" uid="uid://do3lpklchqx5t" path="res://actor/actionable.tscn" id="7_iakoy"]
[ext_resource type="Resource" uid="uid://co00moxftpji8" path="res://scenes/levels/level_002/level_002.dialogue" id="8_5r7b8"]
[ext_resource type="PackedScene" uid="uid://beveh35ahb7r8" path="res://actor/object/automatic_door.tscn" id="9_wfh7k"]
[ext_resource type="AudioStream" uid="uid://dyyxv1ft6j2xg" path="res://audio/machine_hs.mp3" id="10_dkucy"]
[ext_resource type="AudioStream" uid="uid://dqyo1rtbm1mej" path="res://audio/ticket.wav" id="11_sk2fa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wym1k"]
size = Vector2(472, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f00hd"]
size = Vector2(22, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyp6f"]
size = Vector2(22, 16)

[node name="Level002" type="Node2D"]
script = ExtResource("1_tnk3h")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_5uofa")
format = 2
layer_0/name = "Ground&Walls"
layer_0/modulate = Color(0, 0.784314, 0, 1)
layer_0/tile_data = PackedInt32Array(0, 327681, 7, 65536, 327681, 7, 131072, 327681, 7, 196608, 327681, 7, 262144, 327681, 0, 327680, 327681, 5, 393216, 327681, 5, 458752, 327681, 4, 524288, 327681, 5, 589824, 327681, 5, 655360, 327681, 5, 720896, 327681, 5, 786432, 327681, 5, 851968, 327681, 4, 917504, 327681, 5, 983040, 327681, 5, 1048576, 327681, 3, 1114112, 327681, 7, 1179648, 327681, 7, 1245184, 327681, 7, 1, 327681, 7, 65537, 327681, 7, 131073, 327681, 7, 196609, 327681, 7, 262145, 524289, 0, 327681, 327681, 7, 393217, 327681, 7, 458753, 327681, 7, 524289, 327681, 7, 589825, 327681, 7, 655361, 327681, 7, 720897, 327681, 7, 786433, 327681, 7, 851969, 327681, 7, 917505, 458753, 7, 983041, 327681, 7, 1048577, 589825, 3, 1114113, 327681, 7, 1179649, 327681, 7, 1245185, 327681, 7, 2, 327681, 7, 65538, 327681, 7, 131074, 327681, 7, 196610, 327681, 7, 262146, 524289, 0, 327682, 327681, 7, 393218, 327681, 7, 458754, 327681, 7, 524290, 327681, 7, 589826, 327681, 7, 655362, 327681, 7, 720898, 327681, 7, 786434, 327681, 7, 851970, 327681, 7, 917506, 327681, 7, 983042, 327681, 7, 1048578, 589825, 3, 1114114, 327681, 7, 1179650, 327681, 7, 1245186, 327681, 7, 3, 327681, 7, 65539, 327681, 7, 131075, 327681, 7, 196611, 327681, 7, 262147, 524289, 0, 327683, 327681, 7, 393219, 327681, 7, 458755, 327681, 7, 524291, 327681, 7, 589827, 327681, 7, 655363, 327681, 7, 720899, 327681, 7, 786435, 327681, 7, 851971, 327681, 7, 917507, 327681, 7, 983043, 327681, 7, 1048579, 458753, 3, 1114115, 327681, 7, 1179651, 327681, 7, 1245187, 327681, 7, 4, 327681, 7, 65540, 327681, 7, 131076, 327681, 7, 196612, 327681, 7, 262148, 327681, 7, 327684, 327681, 7, 393220, 327681, 7, 458756, 327681, 7, 524292, 327681, 7, 589828, 327681, 7, 655364, 327681, 7, 720900, 327681, 7, 786436, 327681, 7, 851972, 327681, 7, 917508, 327681, 7, 983044, 393217, 7, 1048580, 327681, 7, 1114116, 327681, 7, 1179652, 327681, 7, 1245188, 327681, 7, 5, 327681, 7, 65541, 327681, 7, 131077, 327681, 7, 196613, 327681, 7, 262149, 327681, 7, 327685, 327681, 7, 393221, 327681, 7, 458757, 327681, 7, 524293, 327681, 7, 589829, 327681, 7, 655365, 327681, 7, 720901, 327681, 7, 786437, 327681, 7, 851973, 327681, 7, 917509, 327681, 7, 983045, 327681, 7, 1048581, 327681, 7, 1114117, 327681, 7, 1179653, 327681, 7, 1245189, 327681, 7, 6, 327681, 7, 65542, 327681, 7, 131078, 327681, 7, 196614, 327681, 7, 262150, 524289, 0, 327686, 327681, 7, 393222, 327681, 7, 458758, 327681, 7, 524294, 327681, 7, 589830, 327681, 7, 655366, 327681, 7, 720902, 327681, 7, 786438, 327681, 7, 851974, 327681, 7, 917510, 327681, 7, 983046, 327681, 7, 1048582, 589825, 3, 1114118, 327681, 7, 1179654, 327681, 7, 1245190, 327681, 7, 7, 327681, 7, 65543, 327681, 7, 131079, 327681, 7, 196615, 327681, 7, 262151, 524289, 0, 327687, 327681, 7, 393223, 327681, 7, 458759, 327681, 7, 524295, 327681, 7, 589831, 327681, 7, 655367, 327681, 0, 720903, 327681, 3, 786439, 327681, 7, 851975, 327681, 7, 917511, 327681, 7, 983047, 327681, 7, 1048583, 589825, 3, 1114119, 327681, 7, 1179655, 327681, 7, 1245191, 327681, 7, 8, 327681, 7, 65544, 327681, 7, 131080, 327681, 7, 196616, 327681, 7, 262152, 524289, 0, 327688, 327681, 7, 393224, 327681, 7, 458760, 327681, 7, 524296, 327681, 7, 589832, 327681, 7, 655368, 393217, 0, 720904, 393217, 3, 786440, 327681, 7, 851976, 327681, 7, 917512, 327681, 7, 983048, 327681, 7, 1048584, 589825, 3, 1114120, 327681, 7, 1179656, 327681, 7, 1245192, 327681, 7, 9, 327681, 7, 65545, 327681, 7, 131081, 327681, 7, 196617, 327681, 7, 262153, 458753, 0, 327689, 327681, 7, 393225, 327681, 7, 458761, 327681, 7, 524297, 327681, 7, 589833, 327681, 7, 655369, 327681, 7, 720905, 458753, 7, 786441, 327681, 7, 851977, 327681, 7, 917513, 327681, 7, 983049, 327681, 7, 1048585, 589825, 3, 1114121, 327681, 7, 1179657, 327681, 7, 1245193, 327681, 7, 10, 327681, 7, 65546, 327681, 7, 131082, 327681, 7, 196618, 327681, 7, 262154, 524289, 0, 327690, 327681, 7, 393226, 327681, 7, 458762, 327681, 7, 524298, 327681, 7, 589834, 327681, 7, 655370, 393217, 7, 720906, 327681, 7, 786442, 327681, 7, 851978, 327681, 7, 917514, 327681, 7, 983050, 327681, 7, 1048586, 589825, 3, 1114122, 524289, 7, 1179658, 327681, 7, 1245194, 327681, 7, 11, 327681, 7, 65547, 327681, 7, 131083, 327681, 7, 196619, 327681, 7, 262155, 524289, 0, 327691, 327681, 7, 393227, 327681, 7, 458763, 327681, 7, 524299, 327681, 7, 589835, 327681, 7, 655371, 327681, 7, 720907, 327681, 7, 786443, 327681, 7, 851979, 327681, 7, 917515, 327681, 7, 983051, 327681, 7, 1048587, 589825, 3, 1114123, 327681, 7, 1179659, 327681, 7, 1245195, 327681, 7, 12, 327681, 7, 65548, 327681, 7, 131084, 327681, 7, 196620, 327681, 7, 262156, 524289, 0, 327692, 327681, 7, 393228, 327681, 7, 458764, 327681, 7, 524300, 327681, 7, 589836, 327681, 7, 655372, 327681, 7, 720908, 327681, 7, 786444, 327681, 7, 851980, 327681, 7, 917516, 327681, 7, 983052, 327681, 7, 1048588, 589825, 3, 1114124, 327681, 7, 1179660, 327681, 7, 1245196, 327681, 7, 13, 327681, 7, 65549, 327681, 7, 131085, 327681, 7, 196621, 327681, 7, 262157, 524289, 0, 327693, 327681, 7, 393229, 327681, 7, 458765, 327681, 7, 524301, 327681, 7, 589837, 327681, 7, 655373, 327681, 7, 720909, 327681, 7, 786445, 327681, 7, 851981, 327681, 7, 917517, 327681, 7, 983053, 327681, 7, 1048589, 589825, 3, 1114125, 327681, 7, 1179661, 327681, 7, 1245197, 327681, 7, 14, 327681, 7, 65550, 327681, 7, 131086, 327681, 7, 196622, 327681, 7, 262158, 524289, 0, 327694, 327681, 7, 393230, 327681, 7, 458766, 327681, 7, 524302, 327681, 7, 589838, 327681, 7, 655374, 327681, 7, 720910, 327681, 7, 786446, 327681, 7, 851982, 327681, 7, 917518, 327681, 7, 983054, 327681, 7, 1048590, 589825, 3, 1114126, 327681, 7, 1179662, 327681, 7, 1245198, 327681, 7, 15, 327681, 7, 65551, 327681, 7, 131087, 327681, 7, 196623, 327681, 7, 262159, 589825, 0, 327695, 327681, 7, 393231, 327681, 7, 458767, 327681, 7, 524303, 327681, 7, 589839, 327681, 7, 655375, 327681, 0, 720911, 327681, 3, 786447, 327681, 7, 851983, 327681, 7, 917519, 327681, 7, 983055, 327681, 7, 1048591, 589825, 3, 1114127, 327681, 7, 1179663, 524289, 7, 1245199, 327681, 7, 16, 327681, 7, 65552, 327681, 7, 131088, 327681, 7, 196624, 327681, 7, 262160, 524289, 0, 327696, 327681, 7, 393232, 327681, 7, 458768, 327681, 7, 524304, 327681, 7, 589840, 327681, 7, 655376, 393217, 0, 720912, 393217, 3, 786448, 327681, 7, 851984, 327681, 7, 917520, 327681, 7, 983056, 327681, 7, 1048592, 589825, 3, 1114128, 327681, 7, 1179664, 327681, 7, 1245200, 327681, 7, 17, 327681, 7, 65553, 327681, 7, 131089, 393217, 7, 196625, 327681, 7, 262161, 524289, 0, 327697, 327681, 7, 393233, 327681, 7, 458769, 327681, 7, 524305, 327681, 7, 589841, 327681, 7, 655377, 327681, 7, 720913, 327681, 7, 786449, 327681, 7, 851985, 327681, 7, 917521, 327681, 7, 983057, 327681, 7, 1048593, 589825, 3, 1114129, 327681, 7, 1179665, 393217, 7, 1245201, 327681, 7, 18, 327681, 7, 65554, 327681, 7, 131090, 327681, 7, 196626, 327681, 7, 262162, 393217, 0, 327698, 524289, 5, 393234, 524289, 5, 458770, 524289, 5, 524306, 524289, 5, 589842, 524289, 5, 655378, 524289, 5, 720914, 524289, 4, 786450, 524289, 5, 851986, 524289, 5, 917522, 524289, 5, 983058, 524289, 5, 1048594, 393217, 3, 1114130, 327681, 7, 1179666, 327681, 7, 1245202, 327681, 7, 19, 458753, 2, 65555, 458753, 2, 131091, 458753, 2, 196627, 458753, 2, 262163, 458753, 2, 327699, 458753, 2, 393235, 458753, 2, 458771, 458753, 2, 524307, 458753, 2, 589843, 458753, 2, 655379, 458753, 2, 720915, 458753, 2, 786451, 458753, 2, 851987, 458753, 2, 917523, 458753, 2, 983059, 458753, 2, 1048595, 458753, 2, 1114131, 458753, 2, 1179667, 458753, 2, 1245203, 458753, 2, 1310719, 589825, 1, 1245183, 589825, 1, 1179647, 589825, 1, 1114111, 589825, 1, 1048575, 589825, 1, 983039, 589825, 1, 917503, 589825, 1, 851967, 589825, 1, 786431, 589825, 1, 720895, 589825, 1, 655359, 589825, 1, 589823, 589825, 1, 524287, 589825, 1, 458751, 589825, 1, 393215, 589825, 1, 327679, 589825, 1, 262143, 589825, 1, 196607, 589825, 1, 131071, 589825, 1, 65535, 589825, 1, 1376255, 524289, 6, 1310720, 524289, 6, 1310721, 524289, 6, 1310722, 524289, 6, 1310723, 524289, 6, 1310724, 524289, 6, 1310725, 524289, 6, 1310726, 524289, 6, 1310727, 524289, 6, 1310728, 524289, 6, 1310729, 524289, 6, 1310730, 524289, 6, 1310731, 524289, 6, 1310732, 524289, 6, 1310733, 524289, 6, 1310734, 524289, 6, 1310735, 524289, 6, 1310736, 524289, 6, 1310737, 524289, 6, 1310738, 524289, 6, 1310739, 524289, 6)
layer_1/name = "Floor"
layer_1/tile_data = PackedInt32Array(65536, 1, 3, 65537, 1, 3, 65538, 1, 3, 65539, 1, 3, 65540, 1, 3, 65541, 1, 3, 65542, 1, 3, 65543, 1, 3, 65544, 1, 3, 65545, 1, 3, 65546, 1, 3, 65547, 1, 3, 65548, 1, 3, 65549, 1, 3, 65550, 1, 3, 65551, 1, 3, 65552, 1, 3, 65553, 1, 3, 65554, 1, 3)

[node name="Player" parent="." instance=ExtResource("3_fp1qh")]
unique_name_in_owner = true
visible = false
z_index = 2
position = Vector2(280, 84)
initial_orientation = Vector2(2.08165e-12, 1)

[node name="MapCamera" parent="Player" node_paths=PackedStringArray("tileMap") instance=ExtResource("4_d3qgh")]
tileMap = NodePath("../../TileMap")
metadata/_edit_lock_ = true

[node name="TrainLeavingDestination" type="Node2D" parent="."]
position = Vector2(-512, 48)

[node name="TrainArrivalDestination" type="Node2D" parent="."]
position = Vector2(282, 48)

[node name="Train" parent="." node_paths=PackedStringArray("leaving_destination", "arriving_destination") instance=ExtResource("4_5jfx4")]
unique_name_in_owner = true
position = Vector2(509, 48)
leaving_destination = NodePath("../TrainLeavingDestination")
arriving_destination = NodePath("../TrainArrivalDestination")

[node name="Actionnable" parent="Train" instance=ExtResource("7_iakoy")]
dialogueResource = ExtResource("8_5r7b8")
dialogueStart = "train"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Train/Actionnable"]
shape = SubResource("RectangleShape2D_wym1k")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="TicketMachineHS_Left1" parent="." instance=ExtResource("6_mvghg")]
position = Vector2(256, 160)

[node name="Actionnable" parent="TicketMachineHS_Left1" instance=ExtResource("7_iakoy")]
dialogueResource = ExtResource("8_5r7b8")
dialogueStart = "hs_ticket_machine"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TicketMachineHS_Left1/Actionnable"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_f00hd")

[node name="TicketMachineHS_Left2" parent="." instance=ExtResource("6_mvghg")]
position = Vector2(256, 384)

[node name="Actionnable" parent="TicketMachineHS_Left2" instance=ExtResource("7_iakoy")]
dialogueResource = ExtResource("8_5r7b8")
dialogueStart = "hs_ticket_machine"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TicketMachineHS_Left2/Actionnable"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_f00hd")

[node name="TicketMachineHS_Right1" parent="." instance=ExtResource("6_mvghg")]
position = Vector2(512, 160)

[node name="Actionnable" parent="TicketMachineHS_Right1" instance=ExtResource("7_iakoy")]
dialogueResource = ExtResource("8_5r7b8")
dialogueStart = "hs_ticket_machine"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TicketMachineHS_Right1/Actionnable"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_jyp6f")

[node name="TicketMachineHS_Right2" parent="." instance=ExtResource("6_mvghg")]
position = Vector2(512, 384)

[node name="Actionnable" parent="TicketMachineHS_Right2" instance=ExtResource("7_iakoy")]
dialogueResource = ExtResource("8_5r7b8")
dialogueStart = "hs_ticket_machine"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TicketMachineHS_Right2/Actionnable"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_jyp6f")

[node name="AutomaticDoor_dock" parent="." instance=ExtResource("9_wfh7k")]
position = Vector2(160, 144)

[node name="AutomaticDoor_enter" parent="." instance=ExtResource("9_wfh7k")]
position = Vector2(160, 528)

[node name="TicketMachin_OK" parent="." instance=ExtResource("6_mvghg")]
position = Vector2(67, 544)

[node name="Actionnable" parent="TicketMachin_OK" instance=ExtResource("7_iakoy")]
dialogueResource = ExtResource("8_5r7b8")
dialogueStart = "ticket_machine"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TicketMachin_OK/Actionnable"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_jyp6f")
metadata/_edit_lock_ = true

[node name="MachineHS" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_dkucy")

[node name="TicketAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_sk2fa")

[connection signal="on_train_arrived" from="Train" to="." method="_on_train_arrived"]
